@@ -35,6 +35,8 @@ export (QQ's a zone into a tarball)t
 Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
 (lots of major bugfixes too)
 tbaMUD 3.59
+[Jan 25 2009] - Jamdog
+  Added cases for missing object types in oedit_disp_val1_menu (other, worn, treasure, trash, key, pen, boat)
 [Jan 25 2009] - Rumble
   Fixed pardon. (thanks Echos-Ironcastle)
 [Jan 24 2009] - Rumble
